--- a/styles/menu.css
+++ b/styles/menu.css
@@ -242,7 +242,7 @@ select{
 */
 #search{
   margin: 0.5em 0 0.5em 10%;
-  width:auto;
+  width: calc( 100% - 10% );
   float:left;
 }
 
@@ -250,7 +250,7 @@ select{
   background-color: #fff;
   float:left;
   margin-left: 0.5em;
-  width:20em;
+  width:70%;
 
 }
 
